Zusammenfassung Folgen hG

--- a/2 Theorie/2.1.2 Häusliche Gewalt.tex
+++ b/2 Theorie/2.1.2 Häusliche Gewalt.tex
@@ -1,8 +1,10 @@
 \subsection{Häusliche Gewalt}    \label{subsec_2.1.2}
 % Definition häusliche Gewalt
 Wie in Kapitel ~\ref{subsec_2.1.1} Aggressivität und Aggression bereits erwähnt ist der Zweck von Gewalt die Macht und Kontrolle zu erhalten \parencite{Def_Aggressivität_vs_violence}. Wenn in einer Beziehung oder innerhalb der Familie eine Person versucht Macht oder Kontrolle über ein anderes Mitglied zu haben, zählt dies zur häuslichen Gewalt. Sowohl in bestehenden, wie auch in aufgelösten Beziehungen familiären, ehelichen oder eheähnlichen Ursprungs kann häusliche Gewalt auftreten \parencite{Def_haus_Gewalt, Def_haus_Gewalt_2}. Diese kommmt nicht nur in der häuslichen Umgebung, einem als sicher gedachten Ort vor, sondern kann auch im öffentlichen Raum stattfinden \parencite{Gewaltarten_WHO}. 
+
 Es lassen sich dabei zwei Muster identifizieren. Ein \textit{spontanes Konfliktverhalten}, oder auch \textit{situative Gewalt} gennant, kann einmalig, aber auch regelmäßig stattfinden und hat die Funktion einer negativen Stressbewältigung. Durch fehlende Ressourcen sehen die gewalttätigen Personen nur die Gewalt als einzige Lösung, um ein Konflikt zu lösen. Ein solches Gewaltmuster ist sowohl bei Männern, wie auch bei Frauen zu finden. Das Motiv von Macht und Kontrolle ist in diesen Fällen nicht ausschlaggebend. Dieses Verhaltensmuster kann sich jedoch in langanhaltendes \textit{systematisches Gewalt- und Kontrollverhalten} verwandeln. Hier haben Macht und Kontrolle eine große Rolle. In diesen Fällen existiert die Absicht den Gegenüber zu kontrollieren und ein langanhaltendes Gefühl von Macht zu verspühren. Dieses Verhalten ist vermehrt bei Männer vorzufinden, die sich in einer ungleichen Beziehung befinden. Um dieses Gefühl von Macht und Kontrolle zu verspüren greifen sie auf entwürdigendes und machtmissbrauchendes Verhalten zurück \parencite{Def_Form_Folge_Gewalt}.
-Die in häusliche Gewalt involvierten Personenkonstellationen können Kinder-Eltern, Eltern-Kinder, Geschwister und Partnerschaften sein \parencite{Def_Form_Folge_Gewalt}. Diese Studie fokusiert sich auf die Gewalt innerhalb der Partnerschaft.
+
+Gewalt lässt sich in drei Kategorien aufteilen, orientiert an der gewaltausübenden Person. Diese Unterteilungen lassen sich in weitere Subgruppierungen teilen. Die \textit{selbstgerichtete Gewalt} beinhaltet suizidales Verhalten, wie Gedanken und Versuche an Suizid, sowie die erfolgreiche Vollendung solcher Versuche. Der zweite Bestandteil dieser Gewalt ist die Selbstmisshandlung \parencite{Gewaltarten_WHO}. Auch die \textit{zwischenmenschliche Gewalt} lässt sich in zwei Unterkategorien aufteilen. Die Gesellschaftsgewalt erfolgt zwischen Personen, die nicht miteinander verwandt sind und die sich möglicherweise nicht kennen und erfolgt demzufolge meist in der Öffentlichkeit. Ein weit bekanntes Beispiel für solhe Gewalt ist die Vergewaltigung oder die sexuelle Nötigung durch Fremde. Sie umfasst aber auch zufällige Gewaltausübungen oder die Gewalt innerhalb Institutionen wie der Schule, Arbeit, Gefängnissen oder Alten- und Pflegeheimen. Die zweite Untergruppe, und die im Rahmen dieser Arbeit wichtigere, ist die Familien- und speziell die Partnerschaftsgewalt \parencite{Gewaltarten_WHO}. Diese Unterkategorie der interpersonellen Gewalt entspricht der bereits zuvor dargeboten häuslichen Gewalt. Die dabei involvierten Personenkonstellationen können Kinder-Eltern, Eltern-Kinder, Geschwister und Partnerschaften sein \parencite{Def_Form_Folge_Gewalt}. Diese Studie fokusiert sich auf die Gewalt innerhalb der Partnerschaft. Die dritte und letzte Kategorie ist die \textit{kollektive Gewalt}, welche sich in soziale, politische und wirtschaftliche Gewalt unterteilen lässt. Diese Unterkategorien zeigen im Gegensatz zu den vorherigen Kategorien mögliche Gründe für die Gewalt durch Staaten oder großen Gruppen an Einzelpersonen. Terroranschläge oder auch Hassangriffe sind Beispiele für eine sozial motivierte kollektive Gewalt. Für politische Gewalt ist Krieg ein sehr prominentes Beispiel. Gewalthandlungen größerer Gruppen mit dem Ziel eines wirtschaftlichen Gewinns sind Bestandteil der wirtschaftlichen Gewalt. Gewalthandlungen durch größere Gruppen können stehts mehrere Motive haben \parencite{Gewaltarten_WHO}.
 
 
 % GEWALTARTEN
@@ -43,20 +45,101 @@ Häufig entwickelt sich häusliche Gewalt  zu einem immer wiederkehrenden Kreisl
 Bei wiederholter Durchführung nimmt die zweite Phase an Intensität zu und tritt vermehrt auf. Da sich die entlastende Phase der Entschuldigung und Reue dabei verringert, fällt es den Opfern häuslicher Gewalt schwer, sich aus einer solchen Beziehung zu entfernen \parencite{Def_haus_Gewalt}.
 
 
+\subsubsection{Folgen von Gewalt}     \label{2.1.2.3}
+physische, psychische, soziale, finanzielle, gesellschaftliche (1) 
+\parencite{Gewaltart}
+Folgen in all ihren Dimensionen erfassen ist kaum möglich 
+direkt, indirekt, kurzfristig, langfristig, chronifiziert
+häusliche Gewalt = einer der gräßten Risikofaktoren für Gesundheit
+je stärker Gewalterfahrung, desto häufiger gesundheitliche Beschwerden
+physisch:
+    Blaue Flecken, offene Wunden, Knochenbrüche, Bewusstlosigkeit, Komplikationen während Schwangerschaft (= direkte Folgen)
+    körperliche Folgen haben Einfluss auf Lebensbereiche, wie Arbeit
+    Selbstmedikation
+    chronisch, wenn keine zeitnahe (ärztliche) Behandlung wahrgenommen
+    (indirekte Spätfolgen) Schmerzsyndrome, Herzkreislaufbeschwerden, Beschwerden Bewegungsapparats und Atemwege
+    Spätfolgen erklärbar durch andauernden Stressfaktor und somit negativ auf Gesundheit auswirken 
+    schlimmster Ausmaß: Mod und Tötungsdelikte
+psychisch:
+    Angstgefühle, geringes Selbstwertgefühl, Niedergeschlagenheit, Depression, Scham- oder Schuldgefühle, Lustlosigkeit, Schlafstörungen, Konzentrationsschwierigkeiten Essstörungen, Selbstverletzun, Schwierigkeiten in der Beziehung zu Männern und in der Arbeit
+    können zur chronifizierten PTBS oder Persönlichkeitsstörung führen
+    Gewaltbetroffene Frauen weitaus häufiger Depression, Agststörung und Phobien
+    Andere Strategien: Alkohol, Nikotin, Substanzmittel -> Selbstmedikation als Art innere Flucht
+    Konsum hat wiederum negative Auswirkung auf körperliche und seelische Befinden
+    Suizidalität höher: 10.7 Prozent sagen, haben versucht Suizid zu begehen \parencite{psy_Folgen_hG}
+soziale:
+    Opfer schämen oftmals und trauen sich nicht mit Bezugsperson über ihre Gewalterfahrungen zu sprechen oder Hilfe zu suchen
+    Folge: von (helfenden) Umfeld zurückziehen, soziale Isolation
+    Zerstörung familiären uns sozialen Strukturen
+    durch Trennung ganze Familien (mit Kindern) auseinandergerissen
+    Folge: Umzug, Wohnungslosigkeit, aus bestehenden sozialen Netzwerk herausgerissen
+    Einfluss auf zukünftige Beziehungen
+    oftmals Mühe, neue Partnerschaft einzugehen und wieder Vertrauen zu fassen
+    Schwierigkeiten im Umgang mit Männern oder eigenen Sexualität
+finanziel:
+    niedriges Selbstwertgefühl -> Arbeit nicht mehr ausführen können
+    oftmals Gefühl anfallende Erfordernisse nicht meistern können
+    Verlust Arbeitsstelle bzw. längerfristige Erwerbslösigkeit -> psych./ phys. Probleme und soziale Isolation
+    häusliche Gewalt = Armutsrisiko und sozialer Abstieg
+
+gesundheitliche Folgen und Kosten (2)
+\parencite{Def_haus_Gewalt}
+zeitnah, langfristig
+physisch, psychisch, psychosomatische Beschwerden, Tod
+Auswirkungen können länger andeuern, auch wenn Misshandlung bereits beendet
+Kosten erwartungsgemäß schwierig zu ermitteln
+gesellschaftliche Kosten: in sozialen, juristischen Bereich, Gesundheits- und Bildungssektor
+Erwerbsleben, Arbeitsunfähigkeit, Arbeitslosigkeit und Frühberentung
+Folgekosten durch frühes Erkennen und adäquates Behandeln langfristig senken
+
+gesundheitliche, sozioökonomische, psychosoziale (3)
+\parencite{Def_haus_Gewalt_2}
+gesundheitlich:
+    kurz-, mittel, langfristige Folgen
+    körperliche Folgen meist schneller sichtbar, jedoch psychische weitaus schwerwiegender
+psychische:
+    Angststörungen oder Depression
+    mangeldes Selbstwertgefühl, Probleme im Umgang mit anderen Menschen insbesondere männliche Personen, Scham- sowie Schuldgefühle, Suchterkrankungen, PTBS, Suizidgedanken
+    Selbstwert geschwächt -> sind Auffassung: durch Gewalt sind als Person weniger wert
+    Folgen schlimmer je stärker Isolation
+physisch:
+    direkte körperliche Verletzungen, physische sowie psychosomatische Symptome (Magen-Darm-Probleme, nervöses Zucken)
+    Substanzmittelkonsum, weil negative Gefühle von Angst und Hilflosigkeit mindern -> Selbstmedikation als Bewältigungsstrategie
+sozioökonomisch:
+    Schwierigkeiten am Arbeitsplatz
+    durch steigende Stresssituation -> Anforderungen von Arbeitsalltag nicht mehr erfüllen
+    Probleme sichtbar durch: Unpünktlichkeit, Krankenstände, Abwesenheit, geringe Arbeitsbelastung
+    häufig Arbeitsplatzverlust, ständiger Arbeitsplatzwechsel
+    häufig sozialer Abstieg
+psychosozial:
+    Kontakt zu engsten Vertrauten verlieren und somit kein Unterstützungssystem
+    Probleme Hinblick auf neue Freundschaften und Beziehungen
+    schwer jemandem gegenüber zu öffnen und Vertrauen aufzubauen
+    schämen häufig und haben große Ängste und Wutgefühle, welche nicht mehr steuern können  -> machnmal ziehen selbst aus Netzwerk zurück
+
+Folgen für Betroffene (4)
+\parencite{Def_Form_Folge_Gewalt}
+gesundheitlich:
+    nicht nur direkt betroffene Opfer
+    traumatisierend, versetzen in extreme Angst und Hilflosigkeit und überfordern normalen Anpassungs- und Bewältigungsstrategie
+unmittelbar:
+    körperlich: Prellungen, Verstauchungen, Hirnschütterung, Frakturen, innere Verletzungen
+    auch unmittelbar mit psychischen Folgeproblemen: Leistungs- und Konzentrationsschwierigkeiten, erhöhte Medikamenten- und Alkoholkonsum
+mittel- und langfristig:
+    breites Sprektrum somatischer, psychosomatischer und psychischer Gesundheitsbelastung
+    gynäkologische Beschwerden, Herz-Kreislauf-Beschwerden
+    Depression, Stresssymptome, Angststörungen, PTBS, Essstörungen, Suizidalität
+    gesundheitsgefährdende Bewältigungsstrategie
+Art, Tragweite und Merkmale:
+    Auswirkung von verschiedenen Faktoren beeinflusst: individuelle Vorraussetzungen, Form erlebter Gewalt, Verhältnis zur Tatperson
+    psychische Gewalt längerfristig weit gravierendere Belastung als körperliche    -> psychische Langzeitfolgen belasten mehr
+sozialer Bereich und Erwerbsleben
+    Trennung, Scheidung, Auszug, Wegzug, Wechsel der Arbeitsplatzes, Schulwechsel   -> erhebliche Neuorientierung
+    unmittelbar oder längerfristig kann auf Erwerbsleben auswirken
+    Arbeitsunfähigkeit, Krankheitsabsenenz, Leistungsbußen
 
 
-
-%- Gewaltkategorien: gegen selbst; von Kleingruppe ausgehend; Kollektive Gewalt a1 Definition
 %- Folgen: körperlich; gesundheitsgefährdende (Überlebens-) Strategien; (Psycho-)somatische; reproduktive Gesundheit; psychische 
 %- Istambul Konvention: was ist das; welche Aspekte; Artikel 11 und 13 (Partnerschaft Gewalt2020)
 
-%Die Weltgesundheitsorganisation (WHO) differenziert in ihrem Bericht zu Gewalt und 
-%Gesundheit %\parencite{Gewaltarten_WHO} 
-%drei grundlegende Kategorien von Gewalt:
-%\begin{itemize}
-%    \item Gewalt gegen die eigene Person (Selbstmisshandlung, Suizid)
-%    \item Interpersonale Gewalt, die von anderen Einzelpersonen oder einer kleineren Personengruppe 
-%    ausgeht (häusliche Gewalt, Gewalt in der Gemeinschaft)
-%    \item Kollektive Gewalt, die von organisierten Gruppierungen ausgeht (Krieg, Terrorismus, 
-%    Unterdruückung der Menschenrechte, organisierte Gewaltverbrechen)
-%\end{itemize}
+
