--- a/Quellen.bib
+++ b/Quellen.bib
@@ -216,12 +216,11 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
   url           = {https://psychoques.com/differences-between-aggressiveness-and-violence/}
 }
 
-@online{Gewaltarten_WHO,
-  author        = {Krug, E.G. and Dahlberg, L.L. and Mercy, J.A. and Zwi, A.B. and Lozano R.},
-  title         = {World report on violence and health (WHO)},
-  year          = {2002},
-  editor        = {World Health Organisation},
-  url           = {https://apps.who.int/iris/bitstream/handle/10665/42495/9241545615_eng.pdf}
+@techreport{Gewaltarten_WHO,
+  author      = {Krug, E.G. and Dahlberg, L.L. and Mercy, J.A. and Zwi, A.B. and Lozano, R.},
+  institution = {World Health Organisation},
+  title       = {World report on violence and health},
+  year        = {2002}
 }
 
 @inbook{H3_MFUnterschied,
@@ -234,7 +233,7 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
 }
 
 @incollection{jack1999behind,
-  title          = {Behind the mask},
+  title          = {Behind the Mask},
   author         = {Jack, D.C.},
   booktitle      = {Behind the Mask},
   year           = {1999},
@@ -442,4 +441,11 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
   shortauthor  = {EBG},
   title        = {Ursachen, Risiko- und Schutzfaktoren von Gewalt in Paarbeziehungen},
   year         = {2020},
+}
+
+@techreport{psy_Folgen_hG,
+  author      = {Gloor, D. and Meier, H.},
+  institution = {Büro für die Gleichstellung von Frau und Mann der Stadt Zürich und Maternité Inselhof Triemli},
+  title       = {Frauen, Gesundheit und Gewalt im sozialen Nahraum},
+  year        = {2004}
 }
