häusliche Gewalt fertig

--- a/Quellen.bib
+++ b/Quellen.bib
@@ -449,3 +449,10 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
   title       = {Frauen, Gesundheit und Gewalt im sozialen Nahraum},
   year        = {2004}
 }
+
+@techreport{Istambul_Konvention,
+  author      = {{Council of Europe}},
+  institution = {{Council of Europe}},
+  title       = {Übereinkommen des Europarats zur Verhütung und Bekämpfung von Gewalt gegen Frauen und häuslicher Gewalt},
+  year        = {2011}
+}
