--- a/2 Theorie/2.1.2 Häusliche Gewalt.tex
+++ b/2 Theorie/2.1.2 Häusliche Gewalt.tex
@@ -4,7 +4,7 @@ Wie in Kapitel ~\ref{subsec_2.1.1} Aggressivität und Aggression bereits erwähn
 
 Es lassen sich dabei zwei Muster identifizieren. Ein \textit{spontanes Konfliktverhalten}, oder auch \textit{situative Gewalt} gennant, kann einmalig, aber auch regelmäßig stattfinden und hat die Funktion einer negativen Stressbewältigung. Durch fehlende Ressourcen sehen die gewalttätigen Personen nur die Gewalt als einzige Lösung, um ein Konflikt zu lösen. Ein solches Gewaltmuster ist sowohl bei Männern, wie auch bei Frauen zu finden. Das Motiv von Macht und Kontrolle ist in diesen Fällen nicht ausschlaggebend. Dieses Verhaltensmuster kann sich jedoch in langanhaltendes \textit{systematisches Gewalt- und Kontrollverhalten} verwandeln. Hier haben Macht und Kontrolle eine große Rolle. In diesen Fällen existiert die Absicht den Gegenüber zu kontrollieren und ein langanhaltendes Gefühl von Macht zu verspühren. Dieses Verhalten ist vermehrt bei Männer vorzufinden, die sich in einer ungleichen Beziehung befinden. Um dieses Gefühl von Macht und Kontrolle zu verspüren greifen sie auf entwürdigendes und machtmissbrauchendes Verhalten zurück \parencite{Def_Form_Folge_Gewalt}.
 
-Gewalt lässt sich in drei Kategorien aufteilen, orientiert an der gewaltausübenden Person. Diese Unterteilungen lassen sich in weitere Subgruppierungen teilen. Die \textit{selbstgerichtete Gewalt} beinhaltet suizidales Verhalten, wie Gedanken und Versuche an Suizid, sowie die erfolgreiche Vollendung solcher Versuche. Der zweite Bestandteil dieser Gewalt ist die Selbstmisshandlung \parencite{Gewaltarten_WHO}. Auch die \textit{zwischenmenschliche Gewalt} lässt sich in zwei Unterkategorien aufteilen. Die Gesellschaftsgewalt erfolgt zwischen Personen, die nicht miteinander verwandt sind und die sich möglicherweise nicht kennen und erfolgt demzufolge meist in der Öffentlichkeit. Ein weit bekanntes Beispiel für solhe Gewalt ist die Vergewaltigung oder die sexuelle Nötigung durch Fremde. Sie umfasst aber auch zufällige Gewaltausübungen oder die Gewalt innerhalb Institutionen wie der Schule, Arbeit, Gefängnissen oder Alten- und Pflegeheimen. Die zweite Untergruppe, und die im Rahmen dieser Arbeit wichtigere, ist die Familien- und speziell die Partnerschaftsgewalt \parencite{Gewaltarten_WHO}. Diese Unterkategorie der interpersonellen Gewalt entspricht der bereits zuvor dargeboten häuslichen Gewalt. Die dabei involvierten Personenkonstellationen können Kinder-Eltern, Eltern-Kinder, Geschwister und Partnerschaften sein \parencite{Def_Form_Folge_Gewalt}. Diese Studie fokusiert sich auf die Gewalt innerhalb der Partnerschaft. Die dritte und letzte Kategorie ist die \textit{kollektive Gewalt}, welche sich in soziale, politische und wirtschaftliche Gewalt unterteilen lässt. Diese Unterkategorien zeigen im Gegensatz zu den vorherigen Kategorien mögliche Gründe für die Gewalt durch Staaten oder großen Gruppen an Einzelpersonen. Terroranschläge oder auch Hassangriffe sind Beispiele für eine sozial motivierte kollektive Gewalt. Für politische Gewalt ist Krieg ein sehr prominentes Beispiel. Gewalthandlungen größerer Gruppen mit dem Ziel eines wirtschaftlichen Gewinns sind Bestandteil der wirtschaftlichen Gewalt. Gewalthandlungen durch größere Gruppen können stehts mehrere Motive haben \parencite{Gewaltarten_WHO}.
+Gewalt lässt sich in drei Kategorien aufteilen, orientiert an der gewaltausübenden Person. Diese Unterteilungen lassen sich in weitere Subgruppierungen teilen. Die \textit{selbstgerichtete Gewalt} beinhaltet suizidales Verhalten, wie Gedanken an Suizid und Versuche dessen, sowie die erfolgreiche Vollendung solcher Versuche. Der zweite Bestandteil dieser Gewalt ist die Selbstmisshandlung \parencite{Gewaltarten_WHO}. Auch die \textit{zwischenmenschliche Gewalt} lässt sich in zwei Unterkategorien aufteilen. Die Gesellschaftsgewalt erfolgt zwischen Personen, die nicht miteinander verwandt sind und die sich möglicherweise nicht kennen und erfolgt demzufolge meist in der Öffentlichkeit. Ein weit bekanntes Beispiel für solche Gewalt ist die Vergewaltigung oder die sexuelle Nötigung durch Fremde. Sie umfasst aber auch zufällige Gewaltausübungen oder die Gewalt innerhalb Institutionen wie der Schule, Arbeit, Gefängnissen oder Alten- und Pflegeheimen. Die zweite Untergruppe, und die im Rahmen dieser Arbeit wichtigere, ist die Familien- und speziell die Partnerschaftsgewalt \parencite{Gewaltarten_WHO}. Diese Unterkategorie der interpersonellen Gewalt entspricht der bereits zuvor dargeboten häuslichen Gewalt. Die dabei involvierten Personenkonstellationen können Kinder-Eltern, Eltern-Kinder, Geschwister und Partnerschaften sein \parencite{Def_Form_Folge_Gewalt}. Diese Studie fokusiert sich auf die Gewalt innerhalb der Partnerschaft. Die dritte und letzte Kategorie ist die \textit{kollektive Gewalt}, welche sich in soziale, politische und wirtschaftliche Gewalt unterteilen lässt. Diese Unterkategorien zeigen im Gegensatz zu den vorherigen Kategorien mögliche Gründe für die Gewalt durch Staaten oder großen Gruppen an Einzelpersonen. Terroranschläge oder auch Hassangriffe sind Beispiele für eine sozial motivierte kollektive Gewalt. Für politische Gewalt ist Krieg ein sehr prominentes Beispiel. Gewalthandlungen größerer Gruppen mit dem Ziel eines wirtschaftlichen Gewinns sind Bestandteil der wirtschaftlichen Gewalt. Gewalthandlungen durch größere Gruppen können stehts mehrere Motive haben \parencite{Gewaltarten_WHO}.
 
 
 % GEWALTARTEN
@@ -21,125 +21,51 @@ Psychische Gewalt kann durch Worte oder auch durch Gesten und Gesichtsausdrücke
 Wie im zuvorigen Absatz bereits dargeboten, können psychische Gewalthandlungen, wie Drohungen oder oportune bloßstellende Kommentare, als Vorbote sexualisierter Gewalt genutzt werden \parencite{Übergang_psy_zu_sex_Gewalt}. Des Öfteren geben die Betroffenen auf, sich zu wehren und gehen den Anforderungen und Wünschen des Täters nach. Ein solches Verhalten wird von einigen als möglicher Konsens gedeutet \parencite{Def_haus_Gewalt_2}. Diese Art von Gewalt kann sich in unterschiedlichen sexualisierten Handlungen zeigen, wie die unerwünschte Nähe eines Partners, die Belästigung durch sexuelle Sprüche und Berührungen oder das Darbieten von pornografischen Bildern und Videos. Unter Vergewaltigung wird auch die Nötigung zu sexuellen Handlungen verstanden. Selbst der Versuch fällt unter die sexualisierte Gewalt \parencite{Def_haus_Gewalt_2, Gewaltart, Def_Form_Folge_Gewalt}. Die Zwangsgedanken und das Bedürfnis der Macht sind bei Vergewaltigungen stärker vorhanden, als bei anderen sexuellen Gewalthandlungen. Die ausübende Person ist der Auffassung, dass sie solche Handlungen ausüben muss, damit die Geschlechterhierarchie erhalten bleibt. Sie sind sich demzufolge oftmals ihrer Schuld nicht bewusst \parencite{Def_haus_Gewalt_2}.
 
 % soziale Gewalt
-Die soziale Gewalt wird vom \textcite{Def_Form_Folge_Gewalt} als Bestandteil der psychischen Gewalt angesehen. Auch sie ist körperlich nicht erkennbar. Es erfolgt eine soziale Abkoppelung des Opfers von dessn Umfeld. Der Kontakt zu Freunden oder Familien wird untersagt und auch das Treffen bekannter Personen ist sowohl außerhalb wie auch innerhalb des eigenen Zuhauses untersagt. In manchen Fällen sozialer Gewalt, werden die Telefonate durch den Täter mitgehört. Opfer haben oft nicht die Möglichkeit alleine das Haus zu verlassen. Sie werden von ihrem Partner zur und von der Arbeit gebracht \parencite{Def_haus_Gewalt_2, Def_Form_Folge_Gewalt}. Manche Opfer distanzieren sich, aufgrund der psychischen Belastungen, selbst von ihrem sozialen Umfeld. Durch den mangelden sozialen Kontakt ist die Hilfeleistung durch das Umfeld kaum, wenn nicht garnicht möglich \parencite{Def_haus_Gewalt_2}.
+Die soziale Gewalt wird vom \textcite{Def_Form_Folge_Gewalt} als Bestandteil der psychischen Gewalt angesehen. Auch sie ist körperlich nicht erkennbar. Es erfolgt eine soziale Abkoppelung des Opfers von dessen Umfeld. Der Kontakt zu Freunden oder Familien wird untersagt und auch das Treffen bekannter Personen ist sowohl außerhalb wie auch innerhalb des eigenen Zuhauses untersagt. In manchen Fällen sozialer Gewalt, werden die Telefonate durch den Täter mitgehört. Opfer haben oft nicht die Möglichkeit alleine das Haus zu verlassen. Sie werden von ihrem Partner zur und von der Arbeit gebracht \parencite{Def_haus_Gewalt_2, Def_Form_Folge_Gewalt}. Manche Opfer distanzieren sich, aufgrund der psychischen Belastungen, selbst von ihrem sozialen Umfeld. Durch den mangelden sozialen Kontakt ist die Hilfeleistung durch das Umfeld kaum, wenn nicht garnicht möglich \parencite{Def_haus_Gewalt_2}.
 
 % ökonomische Gewalt
-Wie auch die soziale Gewalt, wird die ökonomische Gewalt vom \textcite{Def_Form_Folge_Gewalt} als Unterkategorie der psychischen Gewalt gezählt. Müssen sich die Opfer wiederholt Vorwürfe der Fehlerhaften bzw. nicht ausreichenden Fähigkeiten ihren Beruf, den Haushalt oder die Erziehung der eigenen Kinder auszuüben, erzeugt dies große psychische Belastungen \parencite{Def_haus_Gewalt_2}. Es wird ihnen verboten einen Beruf auszuüben, oder sie müssen die Erwerbe an den Partner abgeben, so dass er der einzige ist, der Macht und Kontrolle über die Finanzen hat \parencite{Def_haus_Gewalt_2, Def_Form_Folge_Gewalt}. Dadurch sind die Betroffenen finanziel von ihren Partnern abhängig \parencite{physische_Gewalt_wie_aggro}.Damit die Gewalt von der Öffentlichkeit nicht erkennbar ist, werden den Betroffenen teure Geschenke überreicht. Dies stärkt die Unsicherheit und Bedenken den Partner zu verlassen, weil schwere finanzielle Folgen befürchtet werden \parencite{Übergang_psy_zu_sex_Gewalt}.
+Wie auch die soziale Gewalt, wird die ökonomische Gewalt vom \textcite{Def_Form_Folge_Gewalt} als Unterkategorie der psychischen Gewalt gezählt. Müssen sich die Opfer wiederholt Vorwürfe der fehlerhaften bzw. nicht ausreichenden Fähigkeiten ihren Beruf, den Haushalt oder die Erziehung der eigenen Kinder auszuüben, anhören, erzeugt dies große psychische Belastungen \parencite{Def_haus_Gewalt_2}. Es wird ihnen untersagt einem Beruf nachzugehen, oder sie müssen die Erwerbe an den Partner abgeben, so dass er der einzige ist, der Macht und Kontrolle über die Finanzen hat \parencite{Def_haus_Gewalt_2, Def_Form_Folge_Gewalt}. Dadurch sind die Betroffenen finanziel von ihren Partnern abhängig \parencite{physische_Gewalt_wie_aggro}. Damit die Gewalt von der Öffentlichkeit nicht erkennbar ist, werden den Betroffenen teure Geschenke überreicht. Dies stärkt die Unsicherheit und Bedenken den Partner zu verlassen, weil schwere finanzielle Folgen befürchtet werden \parencite{Übergang_psy_zu_sex_Gewalt}.
 
 In Anlehung and das \textit{Rad der Gewalt} von \textcite{Rad_der_Gewalt} sind in Anhang A in Abbildung~\ref{Rad der Gewalt} die fünf Gewaltarten nochmal zusammenfassend bildlich dargestellt. %how to reference Anhang?
 
 % URSACHE + KREISLAUF DER GEWALT
 \subsubsection{Ursachen und Aufrechterhaltung von Gewalt}     \label{2.1.2.2}
-Wie bei viele Situationen und Krankheiten, besteht bei der häusliche Gewalt, oder im Rahmen dieser Arbeit die Partnerschaftsgewalt eine Multikausalität. Dies bedeutet, dass nicht ein einziger Faktor als Ursache zu determinieren ist. Es ist vielmehr die Interaktion und Verwobenheit vieler unterschiedlicher Ursachen auf unterschiedlichen Ebenen \parencite{Ursache_hG}. Ein ökologisches Modell versucht anhand von vier Ebenen die Entstehung von Partnerschaftsgewalt zu systematisieren. Die unterschiedlichen Faktoren auf den jeweiligen Ebenen stehen im Zusammenhang miteinander und untereinander und bedingen sich somit gegenseitig. Durch die gemeinsame Interaktion können sie die Auftretenswahrscheinlichkeit von häuslicher Gewalt bevorzugen \parencite{Ursache_hG_2, Ursache_hG, Gewaltart}.
-Auf der kleinsten Ebene steht das Individuum, dessen Verhalten durch persönliche, biologische und entwicklungsbedingte Faktoren beeinflusst wird. Ausschlaggebend sind hierbei eigene Erfahrungen mit Misshandlungen, sowie exessiver Konsum von Suchtmitteln \parencite{Ursache_hG_2, Ursache_hG, Gewaltart}. Das Verhalten der Personen ist laut \textcite{Gewaltart} sowie \textcite{Ursache_hG_2} ebenfalls durch psychische Störungen und Störungen der Persönlichkeit geprägt. Aber auch nicht klinische Eigenschaften, wie das Selbstwertgefühl oder die Stressregulationsfähigkeiten, haben einen bedeutsamen Einfluss auf menschliches Verhalten auf der individuellen Ebene \parencite{Ursache_hG}.
-Eine Instanz höher, auf der Beziehungsebene, beschäftigt sich die Forschung mit der zwischenmenschlichen Interaktion naher Beziehungen. Hierbei wird die Art und Weise betrachtet, wie Partner im Austausch zueinander stehen, wie die Macht zwischen den Partnern verteilt ist und wie sie mit Konflikten unterschiedlichen Ausmaßes innerhalb der Beziehung umgehen \parencite{Ursache_hG_2, Ursache_hG, Gewaltart}.
-Auf der Ebene der Gesellschaft wird das soziale und räumliche Umfeld, wie Verwandte, Freunde, Nachbarn, oder der Arbeitsplatz und Vereine betrachtet. Die Forschung betrachtet Aspekte wie die soziale Isolation oder ein gewalttolerierendes und unterstützendes Mileau \parencite{Ursache_hG_2, Ursache_hG, Gewaltart}. Die Nachbarschaft hat auch mit ihrer Rate an nicht Erwerbstätigen und durch mögliche Drogengeschäfte einen großen Einfluss auf das Verhalten der Beziehungspartner \parencite{Ursache_hG, Gewaltart}.
-Die höchste Ebene ist die der Gesellschaft. Durch ihre sozialen und kulturellen Normen schafft sie ein gewaltförderndes oder -hinterndes Umfeld \parencite{Ursache_hG_2, Ursache_hG, Gewaltart}. Die positive bzw. negative Auffassung von Gewalt in der Gesellschaft generell, aber vor allem in der Politik, im Justizsystem und in den Medien beeinflusst das menschliche Verhalten \parencite{Ursache_hG_2, Ursache_hG}.  
+Wie bei vielen Situationen und Krankheiten, besteht bei der häusliche Gewalt, oder im Rahmen dieser Arbeit die Partnerschaftsgewalt eine Multikausalität. Dies bedeutet, dass nicht ein einziger Faktor als Ursache zu determinieren ist. Es ist vielmehr die Interaktion und Verwobenheit vieler unterschiedlicher Ursachen auf unterschiedlichen Ebenen \parencite{Ursache_hG}. Ein ökologisches Modell versucht anhand von vier Ebenen die Entstehung von Partnerschaftsgewalt zu systematisieren. Die unterschiedlichen Faktoren auf den jeweiligen Ebenen stehen im Zusammenhang miteinander und untereinander und bedingen sich somit gegenseitig. Durch die gemeinsame Interaktion können sie die Auftretenswahrscheinlichkeit von häuslicher Gewalt erhöhen \parencite{Ursache_hG_2, Ursache_hG, Gewaltart}.
+Auf der kleinsten Ebene steht das \textit{Individuum}, dessen Verhalten durch persönliche, biologische und entwicklungsbedingte Faktoren beeinflusst wird. Ausschlaggebend sind hierbei eigene Erfahrungen mit Misshandlungen, sowie exessiver Konsum von Suchtmitteln \parencite{Ursache_hG_2, Ursache_hG, Gewaltart}. Das Verhalten der Personen ist laut \textcite{Gewaltart} sowie \textcite{Ursache_hG_2} ebenfalls durch psychische Störungen und Störungen der Persönlichkeit geprägt. Aber auch nicht klinische Eigenschaften, wie das Selbstwertgefühl oder die Stressregulationsfähigkeiten, haben einen bedeutsamen Einfluss auf menschliches Verhalten auf der individuellen Ebene \parencite{Ursache_hG}.
 
-Häufig entwickelt sich häusliche Gewalt  zu einem immer wiederkehrenden Kreislauf. Dieser beinhaltet die folgenden drei zusammenhängenden Zyklen:
+Eine Instanz höher, auf der \textit{Beziehungsebene}, beschäftigt sich die Forschung mit der zwischenmenschlichen Interaktion naher Beziehungen. Hierbei wird die Art und Weise betrachtet, wie Partner im Austausch zueinander stehen, wie die Macht zwischen den Partnern verteilt ist und wie sie mit Konflikten unterschiedlichen Ausmaßes innerhalb der Beziehung umgehen \parencite{Ursache_hG_2, Ursache_hG, Gewaltart}.
+
+Die \textit{Gemeinschaftsebene} beinhaltet das soziale und räumliche Umfeld, wie Verwandte, Freunde, Nachbarn, oder der Arbeitsplatz und Vereine. Durch die Forschung werden Aspekte wie die soziale Isolation oder ein gewalttolerierendes und unterstützendes Mileau betrachtet \parencite{Ursache_hG_2, Ursache_hG, Gewaltart}. Die Nachbarschaft hat auch mit ihrer Rate an nicht Erwerbstätigen und durch mögliche Drogengeschäfte einen großen Einfluss auf das Verhalten der Beziehungspartner \parencite{Ursache_hG, Gewaltart}.
+
+Auf der höchsten Ebene liegt die \textit{Gesellschaft}. Durch ihre sozialen und kulturellen Normen schafft sie ein gewaltförderndes oder -hinterndes Umfeld \parencite{Ursache_hG_2, Ursache_hG, Gewaltart}. Die positive bzw. negative Auffassung von Gewalt in der Gesellschaft generell, aber vor allem in der Politik, im Justizsystem und in den Medien beeinflusst das menschliche Verhalten \parencite{Ursache_hG_2, Ursache_hG}.  
+
+Da die eben beschriebenen Einflüsse auf die Entstehung von häuslicher Gewalt mit dem Beginn dieser sich nicht plötzlich ändern und entfallen, entwickelt sich die häusliche Gewalt häufig zu einem immer wiederkehrenden Kreislauf. Dieser beinhaltet die folgenden drei zusammenhängenden Zyklen: \\ 
+
 \begin{itemize}
     \item Spannungsaufbau
     \item Gewaltausbruch
     \item Reue, Entschuldigungs- und Entlastungsversuche
 \end{itemize}
+
 Bei wiederholter Durchführung nimmt die zweite Phase an Intensität zu und tritt vermehrt auf. Da sich die entlastende Phase der Entschuldigung und Reue dabei verringert, fällt es den Opfern häuslicher Gewalt schwer, sich aus einer solchen Beziehung zu entfernen \parencite{Def_haus_Gewalt}.
 
 
 \subsubsection{Folgen von Gewalt}     \label{2.1.2.3}
-physische, psychische, soziale, finanzielle, gesellschaftliche (1) 
-\parencite{Gewaltart}
-Folgen in all ihren Dimensionen erfassen ist kaum möglich 
-direkt, indirekt, kurzfristig, langfristig, chronifiziert
-häusliche Gewalt = einer der gräßten Risikofaktoren für Gesundheit
-je stärker Gewalterfahrung, desto häufiger gesundheitliche Beschwerden
-physisch:
-    Blaue Flecken, offene Wunden, Knochenbrüche, Bewusstlosigkeit, Komplikationen während Schwangerschaft (= direkte Folgen)
-    körperliche Folgen haben Einfluss auf Lebensbereiche, wie Arbeit
-    Selbstmedikation
-    chronisch, wenn keine zeitnahe (ärztliche) Behandlung wahrgenommen
-    (indirekte Spätfolgen) Schmerzsyndrome, Herzkreislaufbeschwerden, Beschwerden Bewegungsapparats und Atemwege
-    Spätfolgen erklärbar durch andauernden Stressfaktor und somit negativ auf Gesundheit auswirken 
-    schlimmster Ausmaß: Mod und Tötungsdelikte
-psychisch:
-    Angstgefühle, geringes Selbstwertgefühl, Niedergeschlagenheit, Depression, Scham- oder Schuldgefühle, Lustlosigkeit, Schlafstörungen, Konzentrationsschwierigkeiten Essstörungen, Selbstverletzun, Schwierigkeiten in der Beziehung zu Männern und in der Arbeit
-    können zur chronifizierten PTBS oder Persönlichkeitsstörung führen
-    Gewaltbetroffene Frauen weitaus häufiger Depression, Agststörung und Phobien
-    Andere Strategien: Alkohol, Nikotin, Substanzmittel -> Selbstmedikation als Art innere Flucht
-    Konsum hat wiederum negative Auswirkung auf körperliche und seelische Befinden
-    Suizidalität höher: 10.7 Prozent sagen, haben versucht Suizid zu begehen \parencite{psy_Folgen_hG}
-soziale:
-    Opfer schämen oftmals und trauen sich nicht mit Bezugsperson über ihre Gewalterfahrungen zu sprechen oder Hilfe zu suchen
-    Folge: von (helfenden) Umfeld zurückziehen, soziale Isolation
-    Zerstörung familiären uns sozialen Strukturen
-    durch Trennung ganze Familien (mit Kindern) auseinandergerissen
-    Folge: Umzug, Wohnungslosigkeit, aus bestehenden sozialen Netzwerk herausgerissen
-    Einfluss auf zukünftige Beziehungen
-    oftmals Mühe, neue Partnerschaft einzugehen und wieder Vertrauen zu fassen
-    Schwierigkeiten im Umgang mit Männern oder eigenen Sexualität
-finanziel:
-    niedriges Selbstwertgefühl -> Arbeit nicht mehr ausführen können
-    oftmals Gefühl anfallende Erfordernisse nicht meistern können
-    Verlust Arbeitsstelle bzw. längerfristige Erwerbslösigkeit -> psych./ phys. Probleme und soziale Isolation
-    häusliche Gewalt = Armutsrisiko und sozialer Abstieg
+Es ist naheligend, dass für den Betroffenen Gewalt jeglicher Art auf unterschiedlichen Ebenen und zu unterschiedlichen Zeiten mit unterschiedlicher Dauer negative Auswirkungen hat. Die unmittelbaren und schnell identifizierbaren Folgen sind meist die physischen, die sich in Form von blauen Flecken, Prellungen, Knochenbrüchen, oder auch Komplikationen während einer Schwangerschaft erkennlich machen \parencite{Def_Form_Folge_Gewalt, Gewaltart}. Aktuell erleidende häusliche Gewalt hat auch einen direkten Einfluss auf das Leistungs- und Konzentrationsvermögen einer Person. Langfristige Folgen, oder welche, die erst zu einem spätereren Zeitpunkt ersichtlich werden, können, in Anlehung an die Schwangerschaftskomplikationen, gynäkologische Folgebeschwerden sein. Häusliche Gewalt kann langfristig auch psychische Krankheiten wie Angststörungen, Posttraumatische Belastungsstörungen, Essstörungen, Depression bis hin zur Suizidalität hervorrufen. \parencite{Def_Form_Folge_Gewalt, Gewaltart}. Mehr als 10\% der von stärkerer häuslicher Gewalt betroffenen Frauen gaben in einer Studie von \textcite{psy_Folgen_hG} an, versucht zu haben, sich das Leben zu nehmen. Selbst wenn es nicht im Tod endet, kämpfen Opfer oft sehr lang mit den Folgen, denn sie können über die Gewalthandlungen hinaus andauern \parencite{Def_haus_Gewalt} und desto gravierender die Misshandlungen waren, desto vermehrter sind auch die Folgen \parencite{Gewaltart}.
 
-gesundheitliche Folgen und Kosten (2)
-\parencite{Def_haus_Gewalt}
-zeitnah, langfristig
-physisch, psychisch, psychosomatische Beschwerden, Tod
-Auswirkungen können länger andeuern, auch wenn Misshandlung bereits beendet
-Kosten erwartungsgemäß schwierig zu ermitteln
-gesellschaftliche Kosten: in sozialen, juristischen Bereich, Gesundheits- und Bildungssektor
-Erwerbsleben, Arbeitsunfähigkeit, Arbeitslosigkeit und Frühberentung
-Folgekosten durch frühes Erkennen und adäquates Behandeln langfristig senken
+%physich:
+Zusätzlich zu den eben geschilderten direkten körperlichen Folgen, können durch ein anhaltendes hohes Stressniveau weitere physische Probleme entstehen, da sich anhaltender Stress negativ auf die Gesundheit auswirkt. Erfolgt keine ärztliche Behandlung auf die gegeben Problematiken, wie beispielsweise Herzkreislaufbeschwerden oder Schmerzsyndrome, können sich diese chronifizieren \parencite{Gewaltart}.
 
-gesundheitliche, sozioökonomische, psychosoziale (3)
-\parencite{Def_haus_Gewalt_2}
-gesundheitlich:
-    kurz-, mittel, langfristige Folgen
-    körperliche Folgen meist schneller sichtbar, jedoch psychische weitaus schwerwiegender
-psychische:
-    Angststörungen oder Depression
-    mangeldes Selbstwertgefühl, Probleme im Umgang mit anderen Menschen insbesondere männliche Personen, Scham- sowie Schuldgefühle, Suchterkrankungen, PTBS, Suizidgedanken
-    Selbstwert geschwächt -> sind Auffassung: durch Gewalt sind als Person weniger wert
-    Folgen schlimmer je stärker Isolation
-physisch:
-    direkte körperliche Verletzungen, physische sowie psychosomatische Symptome (Magen-Darm-Probleme, nervöses Zucken)
-    Substanzmittelkonsum, weil negative Gefühle von Angst und Hilflosigkeit mindern -> Selbstmedikation als Bewältigungsstrategie
-sozioökonomisch:
-    Schwierigkeiten am Arbeitsplatz
-    durch steigende Stresssituation -> Anforderungen von Arbeitsalltag nicht mehr erfüllen
-    Probleme sichtbar durch: Unpünktlichkeit, Krankenstände, Abwesenheit, geringe Arbeitsbelastung
-    häufig Arbeitsplatzverlust, ständiger Arbeitsplatzwechsel
-    häufig sozialer Abstieg
-psychosozial:
-    Kontakt zu engsten Vertrauten verlieren und somit kein Unterstützungssystem
-    Probleme Hinblick auf neue Freundschaften und Beziehungen
-    schwer jemandem gegenüber zu öffnen und Vertrauen aufzubauen
-    schämen häufig und haben große Ängste und Wutgefühle, welche nicht mehr steuern können  -> machnmal ziehen selbst aus Netzwerk zurück
+%psychisch:
+Körperliche Folgen haben auf kurzer Sicht eine schmerzhafte und einschränkende Wirkung, dennoch sind vor allem die psychischen Langzeitfolgen gravierender \parencite{Def_haus_Gewalt_2, Def_Form_Folge_Gewalt}. Bei einigen betroffenen lässt sich ein gemindertes Selbstwertgefühl festellen, welches dadurch entstanden ist, dass sie Denken durch die erlittenen Gewalt weniger wert zu sein. Sie berichten auch von Symptomen einer Depression oder auch Scham- und Schuldgefühle. Viele greifen zu Alkohol, Medikamenten oder anderen sinnesbeteubenden Substanzen, um ihrer fatalen Lage zu entfliehen. Der Missbrauch der Suchtmittel hat wiederum negative Auswirkungen auf ihr physisches und psychisches Wohlbefinden \parencite{Def_haus_Gewalt_2, Gewaltart}.
 
-Folgen für Betroffene (4)
-\parencite{Def_Form_Folge_Gewalt}
-gesundheitlich:
-    nicht nur direkt betroffene Opfer
-    traumatisierend, versetzen in extreme Angst und Hilflosigkeit und überfordern normalen Anpassungs- und Bewältigungsstrategie
-unmittelbar:
-    körperlich: Prellungen, Verstauchungen, Hirnschütterung, Frakturen, innere Verletzungen
-    auch unmittelbar mit psychischen Folgeproblemen: Leistungs- und Konzentrationsschwierigkeiten, erhöhte Medikamenten- und Alkoholkonsum
-mittel- und langfristig:
-    breites Sprektrum somatischer, psychosomatischer und psychischer Gesundheitsbelastung
-    gynäkologische Beschwerden, Herz-Kreislauf-Beschwerden
-    Depression, Stresssymptome, Angststörungen, PTBS, Essstörungen, Suizidalität
-    gesundheitsgefährdende Bewältigungsstrategie
-Art, Tragweite und Merkmale:
-    Auswirkung von verschiedenen Faktoren beeinflusst: individuelle Vorraussetzungen, Form erlebter Gewalt, Verhältnis zur Tatperson
-    psychische Gewalt längerfristig weit gravierendere Belastung als körperliche    -> psychische Langzeitfolgen belasten mehr
-sozialer Bereich und Erwerbsleben
-    Trennung, Scheidung, Auszug, Wegzug, Wechsel der Arbeitsplatzes, Schulwechsel   -> erhebliche Neuorientierung
-    unmittelbar oder längerfristig kann auf Erwerbsleben auswirken
-    Arbeitsunfähigkeit, Krankheitsabsenenz, Leistungsbußen
+%sozial:
+Wie bereits im Zussammenhang mit der sozialen Gewalt in Kapitel~\ref{2.1.2.1} dargeboten, kommt es in vielen Fällen zu einer sozialen Isolation. Dadurch verlieren Betroffene ihren Kontakt zur Familie und zu Freunden, womit ein potentiel hilfreiches Umfeld entfällt. Es wurde auch bereits erklärt, dass diese Isolation nicht nur durch den Partner erzwungen sein muss. Der Rückzug kann auch durch das Opfer initiiert werden, wenn es sich beispielsweise für die erlebten Misshandlungen schämt und sich dadurch nicht an das bestehende Umfeld wenden möchte. Dies bereitet vielen auch im späteren Leben weitere Probleme, weil es ihnen schwer fällt sich zu öffnen, oder anderen Personen Vertrauen zu schenken. Schafft es eine Person aus einer solchen Beziehung zu fliehen, bedeutet dies eine große Umstrukturierung ihres Lebens und geht oft mit einer umfangreichen Neuorientierung einher. Eine solche Trennung oder Scheidung kann einen Wohnungsumzug und damit einher einen Arbeitsplatzwechsel mit sich bringen. Im Falle einer Familie mit Kind wird die bestehende Familie entzweit \parencite{Gewaltart, Def_haus_Gewalt_2, Def_Form_Folge_Gewalt}.
 
+%finanziel:
+Zusammen mit einem möglichen Arbeitsplatzwechsel und dem verringertem Selbstwertgefühl sinkt bei vielen die Kraft ihrem Beruf angemessen nachzugehen. Durch gesteigerte Unpünktlichkeit, Krankheitstage und der geminderten Arbeitsleistung kommt es zu häufigem Arbeitsplatzwechsel oder zum Verlust dessen \parencite{Def_haus_Gewalt, Def_haus_Gewalt_2, Def_Form_Folge_Gewalt, Gewaltart}. Aus diesen Gründen geht häusliche Gewalt des öfteren mit einem sozialen Abstieg einher und stellt somit einen Risifoktor für Armut dar \parencite{Def_haus_Gewalt_2, Gewaltart}. Menschen, die nicht erwerbstätig sind, sei es auf Grund von Arbeitsunfähigkeit, Arbeitslosigkeit oder einer Frühberentung, kosten dem Staat Geld. Durch eine frühzeitige Identifizierung und einer angemessen Behandlung könnten diese Kosten gesenkt werden \parencite{Def_haus_Gewalt, Def_Form_Folge_Gewalt}. 
 
-%- Folgen: körperlich; gesundheitsgefährdende (Überlebens-) Strategien; (Psycho-)somatische; reproduktive Gesundheit; psychische 
-%- Istambul Konvention: was ist das; welche Aspekte; Artikel 11 und 13 (Partnerschaft Gewalt2020)
+Abschließend ist jedoch zu sagen, dass eine solche Entwicklung nicht in jedem Falle zu stande kommen muss. Wie in vielen Bereichen sind mehrere Faktoren involviert. Die Intensität und Art der Gewalt, wie auch die persönlichen Ressourcen und das Verhältnis zum Täter beeinflussen die Realität und Zukunft der Opfer \parencite{Def_Form_Folge_Gewalt}.
 
-
+\subsubsection{Istambul Konvention}     \label{2.1.2.4}
+Die Istambul Konvention wurde 2011 vom Europarat konzipiert und hat als Grundsatz \enquote{Frauen vor allen Formen von Gewalt zu schützen und Gewalt gegen Frauen und häusliche Gewalt zu verhüten, zu verfolgen und zu beseitigen} \parencite{Istambul_Konvention}. Die vorliegende Arbeit erfüllt einen Teil des Artikels 11 wie folgt. Nach Artikel 11, Absatz 2 wird eine bevölkerungsbezogene Studie durchgeführt, um die Verbreitung von häuslicher Gewalt zu dokumentieren und bewerten. Zusätzlich wird mit dieser Arbeit Artikel 13 erfüllt, da sie der Bewusstseinsbildung dient \parencite{Istambul_Konvention}.
