Beginn Methode und Ergebnisse

--- a/2 Theorie/2.1.2 Häusliche Gewalt.tex
+++ b/2 Theorie/2.1.2 Häusliche Gewalt.tex
@@ -39,7 +39,7 @@ Die \textit{Gemeinschaftsebene} beinhaltet das soziale und räumliche Umfeld, wi
 
 Auf der höchsten Ebene liegt die \textit{Gesellschaft}. Durch ihre sozialen und kulturellen Normen schafft sie ein gewaltförderndes oder -hinterndes Umfeld \parencite{Ursache_hG_2, Ursache_hG, Gewaltart}. Die positive bzw. negative Auffassung von Gewalt in der Gesellschaft generell, aber vor allem in der Politik, im Justizsystem und in den Medien beeinflusst das menschliche Verhalten \parencite{Ursache_hG_2, Ursache_hG}.  
 
-Da die eben beschriebenen Einflüsse auf die Entstehung von häuslicher Gewalt mit dem Beginn dieser sich nicht plötzlich ändern und entfallen, entwickelt sich die häusliche Gewalt häufig zu einem immer wiederkehrenden Kreislauf. Dieser beinhaltet die folgenden drei zusammenhängenden Zyklen: \\ 
+Da die eben beschriebenen Einflüsse auf die Entstehung von häuslicher Gewalt mit dem Beginn dieser sich nicht plötzlich ändern und entfallen, entwickelt sich die häusliche Gewalt häufig zu einem immer wiederkehrenden Kreislauf. Dieser beinhaltet die folgenden drei zusammenhängenden Zyklen: 
 
 \begin{itemize}
     \item Spannungsaufbau
@@ -68,4 +68,5 @@ Zusammen mit einem möglichen Arbeitsplatzwechsel und dem verringertem Selbstwer
 Abschließend ist jedoch zu sagen, dass eine solche Entwicklung nicht in jedem Falle zu stande kommen muss. Wie in vielen Bereichen sind mehrere Faktoren involviert. Die Intensität und Art der Gewalt, wie auch die persönlichen Ressourcen und das Verhältnis zum Täter beeinflussen die Realität und Zukunft der Opfer \parencite{Def_Form_Folge_Gewalt}.
 
 \subsubsection{Istambul Konvention}     \label{2.1.2.4}
-Die Istambul Konvention wurde 2011 vom Europarat konzipiert und hat als Grundsatz \enquote{Frauen vor allen Formen von Gewalt zu schützen und Gewalt gegen Frauen und häusliche Gewalt zu verhüten, zu verfolgen und zu beseitigen} \parencite{Istambul_Konvention}. Die vorliegende Arbeit erfüllt einen Teil des Artikels 11 wie folgt. Nach Artikel 11, Absatz 2 wird eine bevölkerungsbezogene Studie durchgeführt, um die Verbreitung von häuslicher Gewalt zu dokumentieren und bewerten. Zusätzlich wird mit dieser Arbeit Artikel 13 erfüllt, da sie der Bewusstseinsbildung dient \parencite{Istambul_Konvention}.
+Die Istambul Konvention wurde 2011 vom Europarat konzipiert und hat als Grundsatz \enquote{Frauen vor allen Formen von Gewalt zu schützen und Gewalt gegen Frauen und häusliche Gewalt zu verhüten, zu verfolgen und zu beseitigen} \parencite{Istambul_Konvention}. % Seitenzahl hinzufügen: S. 4
+Die vorliegende Arbeit erfüllt einen Teil des Artikels 11 wie folgt. Nach Artikel 11, Absatz 2 wird eine bevölkerungsbezogene Studie durchgeführt, um die Verbreitung von häuslicher Gewalt zu dokumentieren und bewerten. Zusätzlich wird mit dieser Arbeit Artikel 13 erfüllt, da sie der Bewusstseinsbildung dient \parencite{Istambul_Konvention}.
