--- a/2 Theorie/2.1.3 Gewaltmythen.tex
+++ b/2 Theorie/2.1.3 Gewaltmythen.tex
@@ -1,1 +1,17 @@
 \subsection{Gewaltmythen}   \label{subsec_2.1.3}
+Die Art und Weise, wie Opfer wahrgenommen werden, spielt eine große Rolle für die gesellschaftliche und die eigene Reaktion auf häusliche Gewalt. Ob und wie die Öffentlichkeit und das Opfer auf einen Fall von häuslicher Gewalt reagiert, hängt stark von gesellschaftlichen Wahrnehmung und Einstellung diesem Thema gegenüber ab \parencite{Labelingtheory_plus}. Diese Einstellungen werden von stereotypischen Vorstellungen über häusliche Gewalt geprägt. \textcite{DVMAS_Peters} nennt diese falschen Einstellungen und Vorstellungen Mythen häuslicher Gewalt, die die Schwere physische Aggression versuchen zu verringern, abzustreiten oder versuchen Rechtfertigungsgründe dafür vorzubringen. Mythen häuslicher Gewalt senken die soziale Hilfestellung. Durch sie verändert sich die gewaltbetroffene Person von einem unschuldigen Opfer zu einer Person, die es bewusst oder unbewusst wollte, misshandelt zu werden. Demzufolge ist das Opfer kein Opfer mehr, denn die Person hätte die Gewalt vermeiden können, oder hat den Partner provoziert \parencite{DVMAS_Peters}.
+
+%Vergewaltigungmythen (Exit-Mythen)
+
+\subsubsection{Victim blaming}     \label{2.1.3.1}
+Einer großer Bestandteil dieser Gewaltmythen ist das \textit{victim blaming}. Unter diesem Begriff fällt die Überzeugung einer Person, egal ob Beobachter, Aggressor, oder Opfer, dass die betroffene Person die Verantwortung für die gegebene Lage trägt. In ihren Augen scheint das Opfer nicht Schuldlos zu sein. Individuen, die victim blaming betreiben, rechtfertigen ihre Schuldzuweiseung mit Sätzen, wie: Sie will doch von ihm dominiert werden. Oder Sätze wie: Wenn sie ihn so eifersüchtig macht, dann ist es normal, wenn er so reagiert \parencite{DVMAS_deutsch}. \textcite{victim_blaming} greift zwei Aspekte auf, die die Beurteilung eines Opfers beeinflussen können: Die Beziehung zu ihrem Aggressor und die schwierige Kooperation mit der Polizei. Die Zusammenarbeit mit dem Justizsystem ist erschwert, da die betroffene Person in vielen Fällen eine enge emotionale und finanzielle Bindung mit dem Täter hat. Ein weiterer Grund für die heruasfordernde Zusammenarbeit können die gemeinsamen Kinder des Opfers und Aggressors sein \parencite{victim_blaming}. Im nachfolgenden Kapitel ~\ref{2.1.3.2} werden weitere Gründe dargeboten, die zum victim blaming führen können.
+
+
+\subsubsection{Theorien zur Erklärung von victim blaming}     \label{2.1.3.2}
+Wie kann es dazu kommen, dass eine Person, die über eine lange Zeit hinweg regelmäßig von ihrem Partner misshandelt wird, dafür die Verantwortung zugeschrieben bekommt? Anhand von drei Theorien wird versucht, darzustellen wie persönliche Einstellungen und Weltbilder die Wahrnehmung eines jeden Menschen prägen, die bei manchen zum victim blaming führt.
+
+Die \textit{Etikettierungstheorie} sieht die Ursache als Resultat einer falschen Vorstellung des Opfers häuslicher Gewalt. Diese Theorie geht einen Schritt zurück und betrachtet die Gesellschaft und wie sich zu dem Schluss gelangt, dass gewisses Verhalten abweichend bzw. kriminell ist. Dabei werden zwei Arten von Fehlverhalten unterschieden. \textit{Primäre Abweichung} tritt ein bei missbilligung soziale Normen, ohne dessen bewusst zu sein. Wenn die Gesellschaft das Verhalten anschließend als abweichend definiert, kann dies zu Veränderungen der Selbstkonzeption, sowie zur geminderten Identifikation weiterer Subgruppen abweichenden Verhaltens. \textit{Sekundäre Abweichung} betrifft Fehlverhalten, dass als Resultat der Kennzeichnung und dessen negative Auswirkung auf die Selbstwahrnehmung entstanden ist. Vorallem wenn ein Opfer die missbrauchende Situation nicht verlässt, wird es oft dafür beschuldigt. Das macht es nur schwere für die Person zu entkommen, da sich ihr Leben um diese Betittelung konstruiert. Ursprünglich galt diese Theorie nur Kriminellen gegeüber. Im Laufe der Jahre wurde sie jedoch herangezogen, um die Betittelung des Opfers zu verstehen. \textcite{Labelingtheory_plus} berichten, dass laut bestehender Literatur Opfer basierend auf ihrem Verhalten vor, während und nach ihrer Viktimisierung als von der Norm abweichend betittelt werden. Opfer und ihr Verhalten werden demzufolge von einem großen Teil der Bevölkerung basierend auf gängigen Mythen über missbräuchliche Beziehungen bewertet, ohne die Erfahrungen der Betroffenen eine große Bedeutung beizumessen \parencite{Labelingtheory_plus}.
+
+Der \textit{gerechte Welt-Glaube} sieht die Akzeptanz der Gewaltmythen als Resultat nötigen Eigenschutzes. Er determiniert, dass jede Person das erhält, was ihr zusteht und was sie verdient hat, weil alles auf Basis eines universellen Prinzips der Gerechtigkeit geschieht. Menschen, die an eine solche Welt glauben, müssen demzufolge davon ausgehen, dass das Opfer Empfänger einer gerechten Handlung ist, weil sonst würde dies bedeuten, dass ihre sicht der Welt inkorrekt ist \parencite{GM_Theorien}. 
+
+Auch die \textit{defensive Attributionstheorie} vertritt einen selbstschützenden Ansatz. Für Frauen dient das Nutzen dieser Mythen um sich selbst vor der Vorstelluung, Schaden zu erleiden, zu schützen \parencite{DVMAS, DVMAS_Peters}. Denn durch die Mythen bleibt der Anschein bestehen, dass die Wahrscheinlichkeit für solche Taten gering ist. Sie isolieren Partnerschaftsgewalt auf eine kleine Gruppe von Personen \parencite{DVMAS}. Auf diese Weise werden auch Männer geschützt, denn dadurch wird verhindert, dass Männer als potentielle Aggressoren angezweifelt werden können \parencite{DVMAS, DVMAS_Peters}. Laut der defensive Attributionstheorie schützen Mythen demzufolge potenzielle Opfer vor dem Bewusstwerden der Bedrohung und potenzielle Täter vor der Schuldzuweiseung \parencite{DVMAS_Peters}. Diese Schutzverhaltensweisen stehen im Einklang mit dem gerechte Welt-Glaube.
