--- a/3 Methode/Methoden.tex
+++ b/3 Methode/Methoden.tex
@@ -1,10 +1,8 @@
 \chapter{Methoden}   \label{ch_3}
-Empirische Prüfung der empirischen Hypthese(n). Die Informationen werden in der Vergangenheit
-geschrieben.
+Empirische Prüfung der empirischen Hypthese(n). Die Informationen werden in der Vergangenheit geschrieben.
 
 \section{Stichprobenbeschreibung} \label{sec_3.1}
 Rekrutierung und Eigenschaften der Stichprobe
-
 
 
 \section{Untersuchungsdesign}  \label{sec_3.2}
@@ -17,11 +15,26 @@ effekte\\
 randomiesiert und warum
 
 
-
 \section{Operationalisierung der Konstrukte}    \label{sec_3.3}
-anzahl FB + Vignette\\ % wieviel Items 2 Bsp. Skala, was erheben die; Reliabilität nennen
-was wurde noch alles für die andren Arbeit erhoben \\ % 2 Bsp-Vignetten am besten so viele Faktoren
+anzahl FB + Vignette\\ % wieviel Items 2 Bsp. Skala, was erheben die; Reliabilität nennen (bei DVMAS da englische version nehmen für Validität)
+Deutscher Aggressionsfragebogen: \textbf{Reliabilität} (Cronbachs-Alpha: .62-.82) Retest-Reliabilität (C-A: .73), \textbf{Validität} (Die differentielle Validität wurde über die Korrelationen der Antworten zu den vier Subskalen mit denen zu weiteren ausgewählten Konstrukten bestimmt. Die Subskalen wurden dabei nach dem 4-Faktor Modell von Buss und Perry gebildet und nicht nach den berichteten faktorenanalytischen Ergebnissen für die deutsche Version. Dieses Vorgehen wurde primär gewählt, um einen Vergleich mit anderen Untersuchungen zu erleichtern, aber auch, weil Daten zur Validierung hauptsächlich nur aus Stichprobe 1 vorliegen, der Item 29 nicht vorgegeben wurde.
+
+In Stichprobe 1 wurden dazu jeweils einer Teilgruppe der Befragten Itembatterien zur Erfassung der folgenden Konstrukte ebenfalls vorgelegt:
+\begin{itemize}
+    \item generalisierter Selbstwert (Rosenberg-Skala; siehe v. Collani \& Herzberg, 2003)
+    \item Skala Aggressivität aus dem FPI-R (Fahrenberg, Hampel \& Selg, 1994)
+    \item drei Teilskalen des STAXI (Ärger-In, Ärger-Out, Ärger-Kontrolle; Schwenkenberger et al., 1992)
+    \item NEO-FFI (Borkenau \& Ostendorf, 1991)
+\end{itemize}
+
+Stichprobe 2 beantwortete neben dem Aggressionsfragebogen noch die Kurzform einer Narzissmusskala (Raskin \& Terry, 1987) mit 10 Items.
+
+Mit der Aggressionsskala des FPI (Tabelle 5) ergeben sich erwartungsgemäß hohe korrelative Zusammenhänge zu allen Subskalen des deutschen Aggressionsfragebogens, mit Ausnahme der Subskala Misstrauen. Diese korreliert jedoch hoch negativ mit dem generalisierten Selbstwert (Tabelle 5) nach Rosenberg und hoch positiv mit der nach innen gerichteten Ärgerkomponente aus dem STAXI. Der nach außen gerichtete Ärger ist mit allen drei Komponenten des deutschen Aggressionsfragebogens assoziiert, außer mit der Komponente Misstrauen. Die Subskala Misstrauen erfasst also offenbar im Unterschied zu den drei anderen Subskalen noch weitere Komponenten einer Aggressionsbereitschaft. Die differentielle Validität der Subskalen des deutschen Aggressionsfragebogens wird ferner durch einen hohen negativen Zusammenhang der Subskala Ärger mit Ärgerkontrolle nach dem STAXI (Tabelle 5) belegt und durch Zusammenhänge zwischen Misstrauen sowie Ärger mit den Werten für die Neurotizismusskala des NEO-FFI.)
+was wurde noch alles für die andren Arbeit erhoben \\ 
+% 2 Bsp-Vignetten am besten so viele Faktoren
 die 3 Gütekriterien
+Manipulationscheck
+
 
 \section{Untersuchungsdurchführung}   \label{sec_3.4}
 Zeitraum der Befragung \\
@@ -31,11 +44,13 @@ Was wichtig für einleitungstext \\
 sozio erhoben \\
 potentielle störvariablen (wegen online nicht kontrollierbar)
 
+
 \section{Auswertungsmethode}    \label{sec_3.5}
-SPSS ausgewertet \\ %was umgepolt wurde: GP13,14,17    GS2,5,8
+SPSS ausgewertet \\ %was umgepolt wurde: Variablen wurden so umkodiert, dass der betroffenen Person stets der Zahlenwert 101 sprich der vollen Verantwortung zugeschrieben wurde (GP13,14,17    GS2,5,8) + Aggro 14,22
 % Vorbereitung der Daten: wieviele wurden rausgeschmissen
 deskriptive \\ % Lage, Streuung, Median, Modus, Mittelwert, SD
 hypothesen \\ % das aus präregistrierung: gerichtet, unterschied, tests
 % H3, weil Moderatorviariable hat wurde auf SPSS mit dem plug-in PROCESS berechnet
+erwähnen, dass Vorraussetzung gibt und werden später geprüft
 
 auf 1-2 items eingehen wenn über FB geschrieben wird
