--- a/4 Ergebnisse/Ergebnisse.tex
+++ b/4 Ergebnisse/Ergebnisse.tex
@@ -2,22 +2,36 @@
 Statistische Hypthesenprüfung
 
 \section{Deskriptive Ergebnisse}    \label{sec_4.1}
-dd
+Welche Variablen wurden alle
+\begin{itemize}
+    \item Streudigramm für Pearson Korrelationskoefizienten
+    \item generell Voraussetzungen für die Tests
+    \item https://www.youtube.com/watch?v=ZPoYMfx0aIY (Vorraussetzung für Pearson)
+\end{itemize}
 
 
 \section{Inferenzstatistische Ergebnisse}    \label{sec_4.2}
 Ergebnisse der Hypothesentests
-dd
+
+\subsection{Hypothese 1}    \label{subsec_4.2.1}
+hier Vorraussetzungsergebnisse statistisch darlegen
+
+\subsection{Hypothese 2}    \label{subsec_4.2.2}
+hier Vorraussetzungsergebnisse statistisch darlegen
+
+\subsection{Hypothese 3}    \label{subsec_4.2.3}
+hier Vorraussetzungsergebnisse statistisch darlegen
+
+Moderation: 14.31\% der Varianz des DVMAS werden durch das Modell erklärt.
+Modell erklärt tatsächlich etwas, weil p kleiner .01 ist.
+Grüne Linie: Geschlecht sorgt für höheren DVMAS-Wert bei gleichbleibender Aggression. Bei gleichbleibendem Aggressions-Score sorgt das Geschlecht für einen höheren DVMAS-Wert.
+
+einen haupteffekt der signifikant ist der andere nicht, so wie die interaktion. Regressionsmodell mit 3 Prediktoren. eins hat n sig. Gewicht, der andere nicht.
+
+Da die obere Grenze einen größeren Wert als 0 aufweist, ist die Interaktion nicht signifikant.
+
+Eine Moderationsanalyse wurde durchgeführt, um zu bestimmen, ob die Interaktion zwischen Alter und Freizeit die Nutzung von sozialen Medien signifikant vorhersagt. Die Ergebnisse konnten keinen Moderationseffekt von Alter auf die Beziehung zwischen Freizeit auf Social Media-Nutzung finden, $\Delta R^{2}$ = 16.47\%, F(1, 96) = 18.93, p = .241, 95\% CI[-0.047, -0.015].
 
 
 \section{Explorative Ergebnisse}    \label{sec_4.3}
 
-\begin{table}
-    \begin{tabular}{c}
-        1 \\
-        2 \\
-        3
-    \end{tabular}
-    \caption{blablabla}
-\end{table}
-\input{Histogramm Skala 1 Schlaf.tex}
