--- a/Quellen.bib
+++ b/Quellen.bib
@@ -134,7 +134,7 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
 
 % Theorie Aggresivität  Seite 9: https://archive.org/details/frustrationaggre00doll/page/8/mode/2up?q=aggression
 @inbook{Def_Aggression_1939,
-  author         = {Dollard, J. and Doob, L.W. and Miller, N.E. and Mowrer, O.H. und Sears, R.R.},
+  author         = {Dollard, J. and Doob, L. W. and Miller, N. E. and Mowrer, O. H. and Sears, R. R.},
   chapter        = {Definitions},
   pages          = {1--27},
   publisher      = {New Haven: Yale University-Press},
@@ -143,7 +143,7 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
 }
 
 @inbook{Def_unterscheidung_Springer,
-  author         = {Kornadt, HJ.},
+  author         = {Kornadt, H. J.},
   chapter        = {Was ist Aggression? Was ist Aggressivität? Und wie entstehen sie?},
   editor         = {Springer Fachmedien Wiesbaden GmbH},
   pages          = {31--38},
@@ -217,14 +217,14 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
 }
 
 @techreport{Gewaltarten_WHO,
-  author      = {Krug, E.G. and Dahlberg, L.L. and Mercy, J.A. and Zwi, A.B. and Lozano, R.},
+  author      = {Krug, E. G. and Dahlberg, L. L. and Mercy, J. A. and Zwi, A. B. and Lozano, R.},
   institution = {World Health Organisation},
   title       = {World report on violence and health},
   year        = {2002}
 }
 
 @inbook{H3_MFUnterschied,
-  author         = {Frost, W.D. and Averill, J.R.},
+  author         = {Frost, W. D. and Averill, J. R.},
   chapter        = {Differences Betweem Men and Women in the Everyay Experience of Anger},
   pages          = {281--317},
   publisher      = {Springer Verlag New York Inc.},
@@ -234,7 +234,7 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
 
 @incollection{jack1999behind,
   title          = {Behind the Mask},
-  author         = {Jack, D.C.},
+  author         = {Jack, D. C.},
   booktitle      = {Behind the Mask},
   year           = {1999},
   publisher      = {Boston: Harvard University Press},
@@ -242,7 +242,7 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
 }
 
 @article{Aggressionsfragebogen,
-  author        = {Werner, R. und von Collani, G.},
+  author        = {Werner, R. and von Collani, G.},
   title         = {Deutscher Aggressionsfragebogen},
   journal       = {Zusammenstellung sozialwissenschaftlicher Items und Skalen (ZIS)},
   publisher     = {ZIS - GESIS Leibniz Institute for the Social Sciences},
@@ -258,7 +258,7 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
 }
 
 @online{impulsive_aggro_psych_Störung,
-  author        = {Amann, B.H.},
+  author        = {Amann, B. H.},
   title         = {A Clinician's Guide to Impulsive Aggression},
   year          = {2022},
   url           = {https://www.additudemag.com/impulsive-aggression-clinicians-guide/},
@@ -272,7 +272,7 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
 }
 
 @online{impulsive_instrumental_aggro_healtline,
-  author        = {Gabbey, A.E. and Raypole, C.},
+  author        = {Gabbey, A. E. and Raypole, C.},
   editor        = {Dr. Juby, B.},
   title         = {Aggressive Behaviou: Unterstanding Aggression and How to Treat It},
   year          = {2022},
@@ -308,7 +308,7 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
 }
 
 @article{ausmaß_verbale_aggro,
-  author          = {Craig, W.M.},
+  author          = {Craig, W. M.},
   journal         = {Personality and Individual Differences},
   title           = {The relationship among bullying, victimization, depression, anxiety, and aggression in elementary school children},
   volume          = {24},
@@ -319,7 +319,7 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
 @inbook{Aggro_Theorie,
   author         = {Bandura, A.},
   chapter        = {Psychological mechanisms of aggression.},
-  editor         = {Geen, R.G. and Donnerstein, E.I.},
+  editor         = {Geen, R. G. and Donnerstein, E. I.},
   pages          = {1--40},
   publisher      = {New York: Academic Press},
   title          = {Aggression: Theoretical and empirical reviews},
@@ -389,7 +389,7 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
 }
 
 @inbook{psych_Gewalt,
-  author         = {Lamnek, S. and Luedtke, J. and Ottermann, R. und Vogl, S.},
+  author         = {Lamnek, S. and Luedtke, J. and Ottermann, R. and Vogl, S.},
   chapter        = {Erscheinungsformen häuslicher Gewalt},
   pages          = {115},
   publisher      = {VS Verlag für Wozialwissenschaften},
@@ -401,7 +401,7 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
 }
 
 @inbook{psych_Gewalt_2,
-  author         = {Hirigoyen, M.F.},
+  author         = {Hirigoyen, M. F.},
   translator     = {Gabler, I. M.},
   chapter        = {Seelische Gewalt},
   pages          = {37},
@@ -455,4 +455,64 @@ abstract = {CRISPR–Cas systems are recently discovered, RNA-based immune syste
   institution = {{Council of Europe}},
   title       = {Übereinkommen des Europarats zur Verhütung und Bekämpfung von Gewalt gegen Frauen und häuslicher Gewalt},
   year        = {2011}
+}
+
+@article{Labelingtheory_plus,
+  author          = {Policastro, C. and Payne, B. K.},
+  journal         = {Journal of Aggression, Maltreatment \& Trauma},
+  number          = {4},
+  title           = {The Blameworthy Victim: Domestic Violence Myths and the Criminalization of Victimhood},
+  volume          = {22},
+  year            = {2013},
+  pages           = {329--347},
+  doi             = {10.1080/10926771.2013.775985},
+}
+
+@article{GM_Theorien,
+  author          = {Rollero, C. and De Piccoli, N.},
+  journal         = {International Journal of Environmental Research and Public Health},
+  number          = {21},
+  title           = {Myths about Intimate Partner Violence and Moral Disengagement: An Analysis of Sociocultural Dimensions Sustaining Violence against Women},
+  volume          = {17},
+  pages           = {1-11},
+  year            = {2020},
+  doi             = {10.3390/ijerph17218139},
+}
+
+@article{DVMAS,
+  author          = {Lelaurain, S. and Fonte, D. and Granziani, P. and Lo Monaco, G.},
+  journal         = {Affilia, SAGE Publications},
+  title           = {French Validation of the Domestic Violence Myth Acceptance Scale (DVMAS)},
+  volume          = {34},
+  year            = {2019},
+  pages           = {239},
+  doi             = {10.1177/0886109918806273},
+}
+
+@article{DVMAS_Peters,
+  author          = {Peters, J.},
+  journal         = {Journal auf Aggression, Maltreatment \& Trauma},
+  number          = {1},
+  title           = {Measuring myths about domestic violence: Development and initial validation of the Domestic Violence Myth Acceptance Scale},
+  volume          = {16},
+  year            = {2008},
+  pages           = {1-21},
+  doi             = {10.1080/10926770801917780},
+}
+
+@unpublished{DVMAS_deutsch,
+  author = {Teutsch, A. C.},
+  note   = {Masterthesis},
+  title  = {Deutsche Version der Domestic Violence Myth Acceptance Scale},
+  year   = {2022}
+}
+
+@article{victim_blaming,
+  author          = {Meyer, S.},
+  journal         = {Theoretical Criminology},
+  pages           = {75-90},
+  title           = {Still blaming the victim of intimate partner violence? Women’s narratives of victim desistance and redemption when seeking support},
+  volume          = {20},
+  year            = {2016},
+  doi             = {https://doi.org/10.1177/1362480615585399},
 }
