--- a/SRH_Vorlage.sty
+++ b/SRH_Vorlage.sty
@@ -25,7 +25,8 @@
 % Anführungsstriche einfacher schreiben
 \MakeOuterQuote{"}
 
-\setcounter{secnumdepth}{4} %bildet Nummerierung bis 4te Ebene
+\setcounter{secnumdepth}{4} % bildet Nummerierung bis 4te Ebene
+\setcounter{tocdepth}{4}  	% zeigt Überschriften bis 4te Ebene im toc
 
 % font size for headings
 \usepackage{anyfontsize}    % lets the user select any font size
