--- a/5 Diskussion/Diskussion.tex
+++ b/5 Diskussion/Diskussion.tex
@@ -1,15 +1,15 @@
-\chapter{Diskussion}   \label{ch_4}
-\section{Zusammenfassung der zentralen Ergebnisse}
+\chapter{Diskussion}   \label{ch_5}
+\section{Zusammenfassung der zentralen Ergebnisse}  \label{sec_5.1}
 Ergebnisse und ihre Implikation für die Gültigkeit der empirischen Hypothesen zusammengefasst
 
 
-\section{Einordnung und Diskussion der Befunde}
+\section{Einordnung und Diskussion der Befunde}     \label{sec_5.2}
 dd
 
 
 \section{Bewertung der Methode}
-Möglische Kritikpunkte der durchgeführten Studie
+Möglische Kritikpunkte der durchgeführten Studie    \label{sec_5.3}
 
 
 \section{Ausblick}
-Theoretische und/ oder praktische Implikationen
+Theoretische und/ oder praktische Implikationen     \label{sec_5.4}
